Fix overflow inconsistency

--- a/src/widgets/countdowns/styles.css
+++ b/src/widgets/countdowns/styles.css
@@ -1,7 +1,12 @@
+html {
+    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    position: relative;
+}
+
 #countdowns-container {
     position: relative;
     height: 100%;
-    overflow: hidden;
 }
 
 #countdowns-list {
@@ -9,9 +14,6 @@
     box-sizing: border-box;
     flex-direction: column;
     height: 100%;
-    overflow-y: auto;
-    scrollbar-width: none;  /* Firefox */
-    -ms-overflow-style: none;  /* IE and Edge */
     padding-top: 20px; /* To account for gradient overlays */
     padding-bottom: 20px;
 }
@@ -22,8 +24,8 @@
 }
 
 /* Gradient overlays */
-#countdowns-container::before,
-#countdowns-container::after {
+html::before,
+html::after {
     content: '';
     position: absolute;
     left: 0;
